--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   background-color: black;
   overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   font-family: monospace;
 }
 
@@ -19,8 +18,14 @@ body {
   border-radius: 10px;
   cursor: pointer;
   font-weight: bold;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 canvas {
   display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
